apps/goappdemo1/base/goappdemo1-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: goappdemo1-svc
  annotations:
    external-dns.alpha.kubernetes.io/hostname: goappdemo1.demo.fisdev.link
  labels:
    app: goappdemo1
    version: 0.0.1
    backstage.io/kubernetes-id: goappdemo1
spec:
  type: ClusterIP
  ports:
  - name: tcp-node
    port: 8080
  selector:
    app: goappdemo1
